# SLCT

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/cmake/: assimp.cmake  assimp_lib.cmake  eigen.cmake  eigen_lib.cmake  freeglut.cmake  freeglut_lib.cmake  gflags.cmake  gflags_lib.cmake  glew.cmake  glew_lib.cmake  glfw.cmake  glfw_lib.cmake  glm.cmake  glm_lib.cmake  glog.cmake  glog_lib.cmake  opencv.cmake  opencv_lib.cmake  opengl.cmake  openmp.cmake
src/app/: CMakeLists.txt  run_on_video.cc
src/base/: CMakeLists.txt
src/mbt/: CMakeLists.txt  tracker.cc  tracker_slc.cc  tracker_slc.hh
